selfhost/test/typechecker/match/error_exhaustive_Enum_variants.2.out
Error at %FILE_NAME%:9:3
Unreachable match case
  |    _ => 5
       ^
The previous case(s) cover all possibilities for match target type 'Color?'
